eks/appmesh-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: sampleexpressapi
  labels:
    mesh: sampleexpressapi-mesh
    appmesh.k8s.aws/sidecarInjectorWebhook: enabled
