eks/deployment.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: sample
  labels:
    pod-security.kubernetes.io/warn: restricted
    pod-security.kubernetes.io/warn-version: v1.25
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: sample
  name: sample-express-api
spec:
  replicas: 2
  selector:
    matchLabels:
      app.kubernetes.io/name: sample-express-api
  template:
    metadata:
      labels:
        app.kubernetes.io/name: sample-express-api
    spec:
      automountServiceAccountToken: false
      securityContext:
        runAsUser: 1000
        runAsGroup: 3000
        fsGroup: 2000
        runAsNonRoot: true
        seccompProfile:
          type: RuntimeDefault
      serviceAccountName: sample-express-api
      # This topology spread constraints configuration makes Karpenter to spread the nodes across all availability zones and spread the pods across all nodes evenly
      topologySpreadConstraints:
        - maxSkew: 1
          topologyKey: topology.kubernetes.io/zone
          whenUnsatisfiable: DoNotSchedule
          labelSelector:
            matchLabels:
              app.kubernetes.io/name: sample-express-api
        - maxSkew: 1
          topologyKey: kubernetes.io/hostname
          whenUnsatisfiable: ScheduleAnyway
          labelSelector:
            matchLabels:
              app.kubernetes.io/name: sample-express-api
      affinity:
        nodeAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 1
              preference:
                matchExpressions:
                  - key: eks.amazonaws.com/capacityType
                    operator: In
                    values:
                      - SPOT
      containers:
        - name: sample-express-api
          image: [URL]
          resources:
            limits:
              cpu: "0.3"
              memory: "300Mi"
            requests:
              cpu: "0.3"
              memory: "300Mi"
          ports:
            - containerPort: 8000
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop: ["ALL"]
---
apiVersion: v1
kind: Service
metadata:
  namespace: sample
  name: sample-express-api
spec:
  selector:
    app.kubernetes.io/name: sample-express-api
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
  type: NodePort
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: sample
  name: sample-express-api
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
spec:
  ingressClassName: alb
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: sample-express-api
                port:
                  number: 8000
